Add sequene of ALLOWED HOSTS and CSRF_TRUSTED_ORIGINS as workspace seems to change often

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
     To load static folder for favicon:
     https://stackoverflow.com/questions/35054230/custom-tag-not-loaded-in-template, accessed on January 22nd, at 15:05. -->
     
-    <link rel="shortcut icon" href="{% static 'favicon/wqcs-icon.PNG' %}"/>    
+    <link rel="shortcut icon" href="{% static 'images/wqcs-icon.PNG' %}"/>    
 </head>
 <body id="body">
     <!-- Header -->
